--- a/images/index.html
+++ b/images/index.html
@@ -85,12 +85,18 @@
    <p> Please fill out this form and I’ll connect with you soon.</p>
     
     <p>Your contact information</p>
-<p>  Name (Your full name)</p>
-<p>  Email (Enter your email address)</p>
-<p>  Message (What can I help you with?)</p>
-<p>Submit</p>
+    <form action="" method="get" class="form-contact">
+<label for="name"></label> Name </label>
+<input type="text" name="name" id="name" placeholder="Your full name" required/>
+
+<label for="email">Email </label>
+        <input type="email" name="email" id="email" placeholder="Enter your email address:" required /> 
+<label for="Message">Message </label>    
+    <input type="Message" name="Message" id="Message" placeholder="What can I help you with?" required /> 
+<input type="submit" value="Submit">
+</form>
 </section>
-    
+
 </main>
 </body>
 <footer>Copyright 2021 TK Photography</footer>
