--- a/images/index.html
+++ b/images/index.html
@@ -77,7 +77,7 @@
     <figcaption> USA, 2021 </figcaption> 
 </figure>
 <figure>
-    <img src= Wyoming.png alt =" Wyoming, 2021">>
+    <img src= Wyoming.png alt =" Wyoming, 2021">
     <figcaption> Wyoming, 2021 </figcaption> 
 </figure>
 </section>
