--- a/images/index.html
+++ b/images/index.html
@@ -84,10 +84,10 @@
 <section id= "contact">
 <h2 >Contact</h2>
    <p> Please fill out this form and I’ll connect with you soon.</p>
-    
     <p>Your contact information</p>
+
     <form action="" method="get" class="form-contact">
-<label for="name"></label> Name </label>
+<label for="name"> Name </label>
 <input type="text" name="name" id="name" placeholder="Your full name" required/>
 
 <label for="email">Email </label>
