--- a/images/index.html
+++ b/images/index.html
@@ -100,5 +100,7 @@
 
 </main>
 </body>
-<footer>Copyright 2021 TK Photography</footer>
+<footer>
+    <small>Copyright 2021 TK Photography</small>
+    </footer>
 </html>
