--- a/images/index.html
+++ b/images/index.html
@@ -31,54 +31,54 @@
    <p>Here are some highlights of my work. The locations and year are in the caption. </p>
 <figure>
    <img src= Chile.png alt="Chile, 2001">
-   <figcaption>Chile, 2001</figcaption>
+   <figcaption class= "bottom-white">Chile, 2001</figcaption>
 </figure>
 <figure>
    <img src=  Guatemala.png  alt= "Guatemala, 1997">
-   <figcaption>Guatemala, 1997</figcaption>
+   <figcaption class="white">Guatemala, 1997</figcaption>
 </figure>
 <figure>
     <img src= Hawaii.png alt = "Hawaii, 2010">
-    <figcaption>Hawaii, 2010</figcaption>
+    <figcaption class= "bottom-white">Hawaii, 2010</figcaption>
 </figure>
 <figure>
     <img src= Iran.png alt ="Iran, 1999">
-    <figcaption>Iran, 1999</figcaption>
+    <figcaption class= "top-2">Iran, 1999</figcaption>
 </figure>
 <figure> 
     <img src=  Ireland.png alt="Ireland, 2012">
-    <figcaption>Ireland, 2012</figcaption>
+    <figcaption class="top-2">Ireland, 2012</figcaption>
 </figure>
 <figure>
     <img src=  Italy.png
     alt ="Italy, 2015">
-    <figcaption>Italy, 2015</figcaption>
+    <figcaption class="bottom">Italy, 2015</figcaption>
 </figure>
 <figure>
     <img src= Moab-Desert.png
     alt =" Moab Desert, 2020">
-    <figcaption>Moab Desert, 2020</figcaption>
+    <figcaption class= "bottom-white">Moab Desert, 2020</figcaption>
 </figure>
 <figure>
     <img src= Rocky-Mountains.png
     alt ="Rocky Mountains, 2009">
-    <figcaption>Rocky Mountains, 2009</figcaption>
+    <figcaption class="top">Rocky Mountains, 2009</figcaption>
 </figure>
     <figure>
     <img src=  Switzerland.png alt="Switzerland, 2014">
-  <figcaption> Switzerland, 2014 </figcaption>
+  <figcaption class ="top"> Switzerland, 2014 </figcaption>
 </figure>
 <figure>
     <img src=  UK.png alt ="UK, 2005">
-    <figcaption>  UK, 2005 </figcaption> 
+    <figcaption class="top">  UK, 2005 </figcaption> 
 </figure>
 <figure>
     <img src= USA.png alt ="USA, 2021">
-    <figcaption> USA, 2021 </figcaption> 
+    <figcaption class="top"> USA, 2021 </figcaption> 
 </figure>
 <figure>
     <img src= Wyoming.png alt =" Wyoming, 2021">
-    <figcaption> Wyoming, 2021 </figcaption> 
+    <figcaption class= "white"> Wyoming, 2021 </figcaption> 
 </figure>
 </section>
 <section id= "contact">
