--- a/images/index.html
+++ b/images/index.html
@@ -26,9 +26,10 @@
     <p>Hello! </p>
 <p> I’m TK and I’m a photographer. I love looking at life through the lens of my camera. Landscape photography is my speciality and it’s taken me all over the world. </p>
 </Section>
-<section id= "gallery">
+<section class= "gallery">
     <h2 >Gallery</h2>
    <p>Here are some highlights of my work. The locations and year are in the caption. </p>
+   
 <figure>
    <img src= Chile.png alt="Chile, 2001">
    <figcaption class= "bottom-white">Chile, 2001</figcaption>
@@ -80,11 +81,11 @@
     <img src= Wyoming.png alt =" Wyoming, 2021">
     <figcaption class= "white"> Wyoming, 2021 </figcaption> 
 </figure>
+
 </section>
 <section id= "contact">
 <h2 >Contact</h2>
    <p> Please fill out this form and I’ll connect with you soon.</p>
-    <p>Your contact information</p>
 
     <form action="" method="get" class="form-contact">
 <label for="name"> Name </label>
@@ -94,7 +95,9 @@
         <input type="email" name="email" id="email" placeholder="Enter your email address:" required /> 
 <label for="Message">Message </label>    
     <input type="Message" name="Message" id="Message" placeholder="What can I help you with?" required /> 
-<input type="submit" value="Submit">
+<div>
+    <input type="submit" value="Submit">
+</div>
 </form>
 </section>
 
