--- a/index.html
+++ b/index.html
@@ -31,54 +31,54 @@
    <p>Here are some highlights of my work. The locations and year are in the caption. </p>
    
 <figure>
-   <img src= Chile.png alt="Chile, 2001">
+   <img src= images/Chile.png alt="Chile, 2001">
    <figcaption class= "bottom-white">Chile, 2001</figcaption>
 </figure>
 <figure>
-   <img src=  Guatemala.png  alt= "Guatemala, 1997">
+   <img src=  images/Guatemala.png  alt= "Guatemala, 1997">
    <figcaption class="white">Guatemala, 1997</figcaption>
 </figure>
 <figure>
-    <img src= Hawaii.png alt = "Hawaii, 2010">
+    <img src= images/Hawaii.png alt = "Hawaii, 2010">
     <figcaption class= "bottom-white">Hawaii, 2010</figcaption>
 </figure>
 <figure>
-    <img src= Iran.png alt ="Iran, 1999">
+    <img src= images/Iran.png alt ="Iran, 1999">
     <figcaption class= "top-2">Iran, 1999</figcaption>
 </figure>
 <figure> 
-    <img src=  Ireland.png alt="Ireland, 2012">
+    <img src=  images/Ireland.png alt="Ireland, 2012">
     <figcaption class="top-2">Ireland, 2012</figcaption>
 </figure>
 <figure>
-    <img src=  Italy.png
+    <img src=  images/Italy.png
     alt ="Italy, 2015">
     <figcaption class="bottom">Italy, 2015</figcaption>
 </figure>
 <figure>
-    <img src= Moab-Desert.png
+    <img src= images/Moab-Desert.png
     alt =" Moab Desert, 2020">
     <figcaption class= "bottom-white">Moab Desert, 2020</figcaption>
 </figure>
 <figure>
-    <img src= Rocky-Mountains.png
+    <img src= images/Rocky-Mountains.png
     alt ="Rocky Mountains, 2009">
     <figcaption class="top">Rocky Mountains, 2009</figcaption>
 </figure>
     <figure>
-    <img src=  Switzerland.png alt="Switzerland, 2014">
+    <img src=  images/Switzerland.png alt="Switzerland, 2014">
   <figcaption class ="top"> Switzerland, 2014 </figcaption>
 </figure>
 <figure>
-    <img src=  UK.png alt ="UK, 2005">
+    <img src=  images/UK.png alt ="UK, 2005">
     <figcaption class="top">  UK, 2005 </figcaption> 
 </figure>
 <figure>
-    <img src= USA.png alt ="USA, 2021">
+    <img src= images/USA.png alt ="USA, 2021">
     <figcaption class="top"> USA, 2021 </figcaption> 
 </figure>
 <figure>
-    <img src= Wyoming.png alt =" Wyoming, 2021">
+    <img src= images/Wyoming.png alt =" Wyoming, 2021">
     <figcaption class= "white"> Wyoming, 2021 </figcaption> 
 </figure>
 
