--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <input type="text" name="name" id="name" placeholder="Your full name" required/>
 
 <label for="email">Email </label>
-        <input type="email" name="email" id="email" placeholder="Enter your email address:" required /> 
+        <input type="email" name="email" id="email" placeholder="Enter your email address" required /> 
 <label for="Message">Message </label>    
     <input type="Message" name="Message" id="Message" placeholder="What can I help you with?" required /> 
 <div>
