--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <label for="email">Email </label>
         <input type="email" name="email" id="email" placeholder="Enter your email address" required /> 
 <label for="Message">Message </label>    
-    <input type="Message" name="Message" id="Message" placeholder="What can I help you with?" required /> 
+    <input type="text" name="Message" id="Message" placeholder="What can I help you with?" required /> 
 <div>
     <input type="submit" value="Submit">
 </div>
