--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <h2 >Contact</h2>
    <p> Please fill out this form and I’ll connect with you soon.</p>
 
-    <form action="" method="get" class="form-contact">
+<form method="get" class="form-contact">
 <label for="name"> Name </label>
 <input type="text" name="name" id="name" placeholder="Your full name" required/>
 
